<resources>
    <string name="app_name">FileShare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="letsGetYou">Let\'s get you</string>
    <string name="started">started!</string>
    <string name="history">History</string>
    <string name="f">F</string>
    <string name="ile">ile</string>
    <string name="s">S</string>
    <string name="hare">hare</string>
    <string name="share_files_to_see_history">Share Files to see History.</string>
    <string name="select">Select</string>
    <string name="select_file">Select File</string>
    <string name="confirm">Confirm</string>
    <string name="file">File</string>
    <string name="share">Share</string>
    <string name="receiving">Receiving</string>
    <string name="content_selection">Content Selection</string>
    <string name="select_files_to_add_to_transfer_list">Select Files to add to transfer list.</string>
    <string name="back">Back</string>
    <string name="send_p2p">Send P2P</string>
    <string name="available_devices">Available Devices</string>
    <string name="refresh_devices">Refresh Devices</string>
    <string name="refresh">Refresh</string>
    <string name="nearby_devices_once_scanned_will_be_shown_here">Nearby Devices once scanned will be shown here.</string>
    <string name="available_devices_will_be_shown_here">Available Devices will be shown here.</string>
    <string name="sending">Sending</string>
    <string name="transfer_in_progress">Transfer in Progress</string>
    <string name="disconnect">Disconnect</string>
</resources>