<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomePageFragment">

    <TextView
        android:id="@+id/HomePageHeadingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/file"
        android:textColor="@color/blue_primary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/HomePageHeadingTv1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:text="ile"-->
<!--        android:textSize="28sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toEndOf="@+id/HomePageHeadingTv"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <TextView
        android:id="@+id/HomePageHeadingTv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/peach"
        android:text="@string/share"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/HomePageHeadingTv"
        app:layout_constraintTop_toTopOf="parent" />
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:text="hare"-->
<!--        android:textSize="28sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toEndOf="@+id/HomePageHeadingTv2"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/HomePageMainContentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/letsGetYou"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomePageHeadingTv" />

    <TextView
        android:id="@+id/HomePageMainContentSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/started"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomePageMainContentTv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendButton"
        style="@style/rounded_button_peach"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/send"
        app:layout_constraintEnd_toStartOf="@+id/receiveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HomePageMainContentSupport" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/receiveButton"
        style="@style/rounded_button_blue"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/receive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sendButton"
        app:layout_constraintTop_toBottomOf="@id/HomePageMainContentSupport" />

    <TextView
        android:id="@+id/HomePageHistoryTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/history"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homePageRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomePageHistoryTv" />

    <TextView
        android:id="@+id/homePageAlternateRecyclerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_files_to_see_history"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomePageHistoryTv" />
</androidx.constraintlayout.widget.ConstraintLayout>