<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SendFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sendFragmentHeadingBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/sendFragmentBackButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/back"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_left_solid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/heading_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/send_p2p"
            app:layout_constraintStart_toEndOf="@+id/sendFragmentBackButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/sendFragmentHeadingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_devices"
        style="@style/heading_primary"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/sendFragmentHeadingBlock"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sendFragmentAlternateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_devices_will_be_shown_here"
        style="@style/heading_tertiary"
        app:layout_constraintBottom_toTopOf="@id/searchDevices"
        app:layout_constraintTop_toBottomOf="@+id/sendFragmentHeadingTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deviceRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginVertical="20dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/sendFragmentHeadingTv"
        app:layout_constraintBottom_toTopOf="@id/searchDevices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/heading_detail_row_recycler_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_devices"
        style="@style/rounded_button_peach"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/deviceRecyclerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>