<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fileFragmentHeadingBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/fileFragmentBackButton"
            android:layout_width="32dp"
            android:layout_height="48dp"
            android:contentDescription="@string/back"
            android:padding="15dp"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_left_solid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/heading_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/content_selection"
            app:layout_constraintStart_toEndOf="@+id/fileFragmentBackButton"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/fileFragmentAlternateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_files_to_add_to_transfer_list"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/selectFileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileFragmentHeadingBlock" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fileRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/selectFileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fileFragmentHeadingBlock"
        tools:itemCount="5"
        tools:listitem="@layout/heading_detail_row_recycler_view"
        android:visibility="invisible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectFileButton"
        style="@style/rounded_button_peach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/select_file"
        app:layout_constraintEnd_toStartOf="@id/fileConfirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fileConfirmButton"
        style="@style/rounded_button_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selectFileButton"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>