<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TransferFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/transferFragmentHeadingBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <ImageButton
        android:id="@+id/sendFragmentBackButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/back"
        android:background="@color/white"
        android:src="@drawable/ic_arrow_left_solid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transferFragmentPageDescriptorTv"
        style="@style/heading_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sending"
        app:layout_constraintStart_toEndOf="@+id/sendFragmentBackButton"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/transferFragmentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_in_progress"
        android:layout_marginTop="24dp"
        style="@style/heading_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transferFragmentHeadingBlock" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transferFragmentFileRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transferFragmentHeader"
        app:layout_constraintBottom_toTopOf="@id/transferFragmentProgressBlock"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transferFragmentProgressBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/transferFragmentDisconnectButton">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toTopOf="@id/fileTransferProgressBar">
            <TextView
                android:id="@+id/textViewTransferFileDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dhbsajnddsajk"
                android:maxWidth="200dp"
                style="@style/heading_tertiary"
                android:layout_weight="95" />

            <TextView
                android:id="@+id/textViewProgressBar"
                style="@style/heading_tertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100%"
                android:layout_weight="5" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/fileTransferProgressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="15"
            app:indicatorColor="@color/blue_primary"
            app:trackColor="@color/off_white"
            app:trackThickness="10dp"
            app:trackCornerRadius="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transferFragmentDisconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        style="@style/rounded_button_peach"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>